# youtube_summarizer

./: .env.template  .gitignore  Dockerfile  LICENSE  Makefile  Readme.md  pyproject.toml
.github/workflows/: ci.yml
docs/: High-Level Design & Architecture.md  usage.md
src/: analysis.py  cli.py  ingestion.py  presentation.py  streamlit_app.py
tests/: conftest.py  test_analysis.py  test_ingestion.py  test_presentation.py
