[tool.poetry]
name = "youtube-summarizer"
version = "0.1.0"
description = "AI-powered YouTube video summarizer with transcript extraction and analysis"
authors = ["Vamsikumar <vamsikumar196@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7,<4.0"
youtube-transcript-api = "^0.6.0"
pytube = "^15.0.0"
openai = "^1.0.0"
streamlit = "^1.28.0"
click = "^8.1.0"
rich = "^13.0.0"
python-dotenv = "^1.0.0"
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
youtube-summarizer = "src.cli:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false